# schemy

./: .gitignore  README.md  setup.cfg  setup.py
src/schemy/: __init__.py  exceptions.py
tests/: basic.py
