[metadata]
name = schemy
version = 0.1.4
author = Samuel Corradi
author_email = samuelcorradi@gmail.com
description = Data structure to represent schemas in databases.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/samuelcorradi/schemy
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Topic :: Database

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6.0

[options.packages.find]
where = src